Confirmação de pagamento

--- a/python/Modulo_5_Notificacao_RealTime/templates/payment.html
+++ b/python/Modulo_5_Notificacao_RealTime/templates/payment.html
@@ -63,7 +63,12 @@
       let socket = io.connect('{{host}}');
       socket.on('connect',()=>{
         console.log('WebSocket connected')
-      })
+      });
+     
+      socket.on('payment-confirmed-{{payment_id}}',()=>{
+        console.log('Pagamento confirmado');
+        location.reload();
+      });
 
     </script>
   </body>
